2009-04-24  Jeffrey Stedfast  <fejj@novell.com>

	* Makefile.am: Fixed to work with make -j (altho it could use love
	to make it actually take advantage of the parallel makes).

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Build Microsoft.VisualBasic.dll if it hasn't
	  been built already.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Fix typo, and keep
	  Microsoft.VisualBasic.dll.mdb away from the linker since it
	  causes the linker to crash.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Create the correct directory.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Try to fix build.

2009-04-21  Jb Evain  <jbevain@novell.com>

	* masterinfos/Microsoft.VisualBasic.info: complete.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* masterinfos/Microsoft.VisualBasic.info: A dummy masterinfo
	  file.

	* Makefile.am: Tune Microsoft.VisualBasic.dll too.

2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Create the directory we're actually putting the
	  files in.

2009-04-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Unbreak the build on OS11.0.

2009-04-02  Jb Evain  <jbevain@novell.com>

	* Makefile.am: re-enable the visibility checks.

2009-03-31  Jb Evain  <jbevain@novell.com>

	* Makefile.am: install smcs.exe in $(prefix)/mono/lib/2.1.

2009-03-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Do not install 2.1 in the GAC but in the plugin dir

2009-03-13  Jb Evain  <jbevain@novell.com>

	* Makefile.am: copy back the tuned assemblies in the mcs tree.

2009-03-13  Atsushi Enomoto  <atsushi@ximian.com>

	* Descriptors/System.Xml.xml: add more types and methods
	  for System.Xml.Serialization.dll use.

2009-03-13  Jb Evain  <jbevain@novell.com>

	* Descriptors/System.Xml.xml
	* Makefile.am:
		add a protection descriptor file for System.Xml.
		Protect System.Xml.XmlConvert.To/FromBinHexString.
